<resources>
    <string name="app_name">Zapatos</string>
    <string name="genero">Genero</string>
    <string name="tipo_zapato">Tipo de zapato</string>
    <string name="marca_zapato" >Marca del zapato</string>
    <string name="calcular">Cotizar</string>
    <string name="masculino">Hombres</string>
    <string name="femenino">Mujeres</string>
    <string name="resultado">Resultado</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clasico</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="cantidad">Cantidad</string>
    <string-array name="generos">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string-array name="tipozapato">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>
    <string-array name="marcas">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
    <string name="zapa_hombres">genero</string>


</resources>
